<?xml version="1.0"?>
<package format="2">
  <name>jog_arm</name>
  <version>0.0.0</version>
  <description>Provides manipulator cartesian jogging.</description>

  <maintainer email="blakeanderson@utexas.edu">Blake</maintainer>

  <license>specified in-file</license>


  <url type="website">http://wiki.ros.org/jog_arm</url>

  <author>Brian O'Neil</author>
  <author email="blakeanderson@utexas.edu">Blake Anderson</author>
  <author email="andyz@utexas.edu">Andy Zelenak</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>moveit_ros_manipulation</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>cmake_modules</depend>
</package>
