<?xml version="1.0"?>
<package format="2">
  <name>jog_api</name>
  <version>0.0.3</version>

  <description>An API for real-time manipulator cartesian jogging.</description>

  <maintainer email="andyz@utexas.edu">Andy Zelenak</maintainer>

  <license>specified in-file</license>


  <url type="website">TODO</url>

  <author email="andyz@utexas.edu">Andy Zelenak</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>moveit_ros_manipulation</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_geometry_msgs</depend>
</package>
